--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ cargo-util = { version = "0.2.14", path = "crates/cargo-util" }
 cargo-util-schemas = { version = "0.6.0", path = "crates/cargo-util-schemas" }
 cargo_metadata = "0.18.1"
 clap = "4.5.11"
+clap_complete = "4.5.14"
 color-print = "0.3.6"
 core-foundation = { version = "0.9.4", features = ["mac_os_10_7_support"] }
 crates-io = { version = "0.40.4", path = "crates/crates-io" }
@@ -153,6 +154,7 @@ cargo-platform.workspace = true
 cargo-util-schemas.workspace = true
 cargo-util.workspace = true
 clap = { workspace = true, features = ["wrap_help"] }
+clap_complete = { workspace = true, features = ["unstable-dynamic"]}
 color-print.workspace = true
 crates-io.workspace = true
 curl = { workspace = true, features = ["http2"] }
